force-app/main/default/objects/Job_Application__c/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <description>Position a candidate is applying for</description>
    <label>Position</label>
    <referenceTo>Position__c</referenceTo>
    <relationshipLabel>Job Applications</relationshipLabel>
    <relationshipName>Job_Applications</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>